[project]
name = "symbolic-plane-analysis"
version = "0.1.0"
description = "Analysis program for calculating parameters from fracture mosaics."
authors = [
    { name = "acbuie", email = "aidancbuie@gmail.com" }
]
dependencies = [
    "rich>=13.7.1",
    "matplotlib>=3.9.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.4",
    "polars[numpy,pandas]>=0.20.31",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
cli = "symbolic_plane_analysis.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "mypy>=1.10.1",
    "ruff>=0.4.10",
    "pre-commit>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/symbolic_plane_analysis"]

[tool.mypy]
strict = true
pretty = true

[[tool.mypy.overrides]]
module = ["shapely", "geopandas"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["D", "E", "F", "I", "N", "W"]
# Google docstring style, as well as recommended ignores when using as a formatter
ignore = ["D105", "D107", "D203", "D204", "D213", "D215", "D400", "D404", "D406", "D407", "D408", "D409", "D413", "W191", "E111", "E114", "E117"]
fixable = ["ALL"]
unfixable = ["F401", "F841"]
